[metadata]
name = networking_f5
summary = ML2 Plugin for OpenStack Neutron supporting F5 Declarative Onboarding
description-file =
    README.md
author = SAP SE
author-email = andrew.karpow@sap.com
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_f5

[entry_points]
console_scripts =
    neutron-f5-agent = networking_f5.agent.f5_agent:main
neutron.ml2.mechanism_drivers =
    f5 = networking_f5.plugins.ml2.drivers.mech_f5.driver:F5MechanismDriver
neutron.ml2.f5.backend_drivers =
    do = networking_f5.agent.declarative_onboarding:F5DeclarativeOnboardingBackend
    icontrol = networking_f5.agent.icontrol_rest:F5iControlRestBackend
